--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -6,6 +6,10 @@ requirements = []
 path = "contracts/extensions/ede000-governance-token.clar"
 depends_on = ["executor-dao", "governance-token-trait", "sip010-ft-trait"]
 
+[contracts.ede000-governance-token-v2]
+path = "contracts/external/ede000-governance-token-v2.clar"
+depends_on = ["executor-dao", "governance-token-trait", "sip010-ft-trait"]
+
 [contracts.ede001-proposal-voting]
 path = "contracts/extensions/ede001-proposal-voting.clar"
 depends_on = ["executor-dao", "proposal-trait", "extension-trait", "governance-token-trait", "ede000-governance-token"]
@@ -41,6 +45,22 @@ depends_on = ["ede004-emergency-execute", "executor-dao"]
 [contracts.edp003-whitelist-escrow-nft]
 path = "contracts/proposals/edp003-whitelist-escrow-nft.clar"
 depends_on = ["proposal-trait", "nft-escrow"]
+
+[contracts.edp005-dao-change-sample-config]
+path = "contracts/external/edp005-dao-change-sample-config.clar"
+depends_on = ["proposal-trait"]
+
+[contracts.edp004-dao-change-governance]
+path = "contracts/external/edp004-dao-change-governance.clar"
+depends_on = ["proposal-trait"]
+
+[contracts.edp007-dao-update-executive]
+path = "contracts/external/edp007-dao-update-executive.clar"
+depends_on = ["proposal-trait"]
+
+[contracts.edp006-dao-mint-burn-edg]
+path = "contracts/external/edp006-dao-mint-burn-edg.clar"
+depends_on = ["proposal-trait"]
 
 [contracts.executor-dao]
 path = "contracts/executor-dao.clar"
